src/components/Widgets/FloatingActionButton/FloatingActionButton.css
.FloatingActionButton {
    outline: none;
    border: none;
    border-radius: 12px;
    overflow: clip;
    position: relative;
    transition: padding 300ms var(--znui-emphasized-motion);
    user-select: none;
}

.FloatingActionButton:enabled {
    cursor: pointer;
}

.FloatingActionButton--default {
    padding: 16px;
}

.FloatingActionButton--expanded {
    padding: 16px;
}

.FloatingActionButton--small {
    padding: 8px;
}

.FloatingActionButton--large {
    padding: 30px;
}

.FloatingActionButton--primary {
    background: var(--znui-primary-container);
    color: var(--znui-on-primary-container);
}

.FloatingActionButton--surface {
    background: var(--znui-surface);
    color: var(--znui-primary);
}

.FloatingActionButton--surface > .state-layer {
    background: var(--znui-primary);
    opacity: 0.05;
}

.FloatingActionButton--secondary {
    background: var(--znui-secondary-container);
    color: var(--znui-on-secondary-container);
}

.FloatingActionButton--tertiary {
    background: var(--znui-tertiary-container);
    color: var(--znui-on-tertiary-container);
}

.FloatingActionButton > .inner > .text {
    user-select: none;
    transition:
            max-width 200ms var(--znui-emphasized-decelerate-motion),
            opacity 200ms var(--znui-emphasized-decelerate-motion),
            margin-left 300ms var(--znui-emphasized-decelerate-motion),
            padding-right 300ms var(--znui-emphasized-decelerate-motion)
;
    max-width: 0;
    padding-right: 0;
    margin-left: -40%;
    opacity: 0;
}

.FloatingActionButton--expanded > .inner > .text {
    transition:
            max-width 300ms var(--znui-emphasized-motion),
            opacity 200ms var(--znui-emphasized-motion),
            margin-left 300ms var(--znui-emphasized-motion),
            padding-right 300ms var(--znui-emphasized-motion)
;

    padding-right: 4px;
    max-width: 300px;
    margin-left: 10px;
    opacity: 1;
}

.FloatingActionButton > .inner {
    display: flex;
    flex-direction: row;
    align-items: center;
    transition: width 1s ease-in-out;
}

/**state=hover**/
.FloatingActionButton:enabled:hover > .state-layer {
    background: currentColor;
    opacity: 0.08;
}

/**state=focus**/
.FloatingActionButton:enabled:focus-visible > .state-layer {
    background: currentColor;
    opacity: 0.12;
}

